--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,180 @@
-numpy
-jsonlines
-matplotlib
-scikit-learn
-jupyterlab
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+async-timeout==5.0.1
+attrs==25.3.0
+audioread==3.0.1
+autocommand==2.2.2
+babel==2.17.0
+backports.tarfile==1.2.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.0
+csvw==3.5.1
+cycler==0.12.1
+Cython==3.0.12
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+dlinfo==2.0.0
+exceptiongroup==1.2.2
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+fonttools==4.57.0
+fqdn==1.5.1
+frozenlist==1.6.0
+fsspec==2025.3.2
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+inflect==7.3.1
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.6
+isodate==0.7.2
+isoduration==20.11.0
+jamo==0.4.1
+jaraco.collections==5.1.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+json5==0.12.0
+jsonlines==4.0.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
+kiwisolver==1.4.7
+language-tags==1.2.0
+lazy_loader==0.4
+librosa==0.11.0
+lightning==2.5.1
+lightning-utilities==0.14.3
+llvmlite==0.43.0
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+matplotlib-inline==0.1.7
+mistune==3.1.3
+more-itertools==10.3.0
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.4.3
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.2.1
+nmpy==0.0.1
+notebook==7.4.0
+notebook_shim==0.2.4
+numba==0.60.0
+numpy==2.0.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+overrides==7.7.0
+packaging==24.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+phonemizer==3.3.0
+pillow==11.2.1
+platformdirs==4.3.7
+pooch==1.8.2
+prometheus_client==0.21.1
+prompt_toolkit==3.0.51
+propcache==0.3.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
+pytorch-lightning==2.5.1
+PyYAML==6.0.2
+pyzmq==26.4.0
+rdflib==7.1.4
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rpds-py==0.24.0
+scikit-learn==1.6.1
+scipy==1.13.1
+segments==2.3.0
+Send2Trash==1.8.3
+six==1.17.0
+sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.7
+soxr==0.5.0.post1
+stack-data==0.6.3
+sympy==1.13.1
+terminado==0.18.1
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tomli==2.2.1
+torch==2.6.0
+torchaudio==2.6.0
+torchmetrics==1.7.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+triton==3.2.0
+typeguard==4.3.0
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.2
+Unidecode==1.3.8
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.4.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.14
+yarl==1.20.0
+zipp==3.21.0
