--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
+annotated-types==0.7.0
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -18,6 +19,7 @@ bleach==6.2.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
@@ -27,20 +29,27 @@ Cython==3.0.12
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+Deprecated @ file:///opt/conda/conda-bld/deprecated_1659726428456/work
 dlinfo==2.0.0
+docker-pycreds==0.4.0
+eval_type_backport==0.2.2
 exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
-filelock==3.18.0
+filelock @ file:///croot/filelock_1744281381737/work
 fonttools==4.57.0
 fqdn==1.5.1
 frozenlist==1.6.0
-fsspec==2025.3.2
+fsspec @ file:///croot/fsspec_1747117721425/work
+gdown==5.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+gmpy2 @ file:///croot/gmpy2_1738085463648/work
 h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
-importlib_metadata==8.6.1
+importlib_metadata @ file:///croot/importlib_metadata-suite_1732633488278/work
 importlib_resources==6.5.2
 inflect==7.3.1
 ipykernel==6.29.5
@@ -54,7 +63,7 @@ jaraco.context==5.3.0
 jaraco.functools==4.0.1
 jaraco.text==3.12.1
 jedi==0.19.2
-Jinja2==3.1.6
+Jinja2 @ file:///croot/jinja2_1741710844255/work
 joblib==1.4.2
 json5==0.12.0
 jsonlines==4.0.0
@@ -79,25 +88,29 @@ lazy_loader==0.4
 librosa==0.11.0
 lightning==2.5.1
 lightning-utilities==0.14.3
+lit @ file:///croot/llvm-package_1741800901749/work/llvm/utils/lit
 llvmlite==0.43.0
-MarkupSafe==3.0.2
+MarkupSafe @ file:///croot/markupsafe_1738584038848/work
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.3
+mkl-service==2.4.0
+mkl_fft @ file:///io/mkl313/mkl_fft_1730824109137/work
+mkl_random @ file:///io/mkl313/mkl_random_1730823916628/work
 more-itertools==10.3.0
-mpmath==1.3.0
+mpmath @ file:///croot/mpmath_1690848262763/work
 msgpack==1.1.0
 multidict==6.4.3
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.2.1
+networkx @ file:///croot/networkx_1717597493534/work
 nmpy==0.0.1
 notebook==7.4.0
 notebook_shim==0.2.4
 numba==0.60.0
-numpy==2.0.2
+numpy @ file:///croot/numpy_and_numpy_base_1725470312869/work/dist/numpy-2.0.1-cp39-cp39-linux_x86_64.whl#sha256=d86a49760b169e0c4fb8c00d248077a0474f640071b7ef584afd5ad4f03b9428
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -111,6 +124,7 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+opentelemetry-api @ file:///croot/opentelemetry-api_1743171649300/work
 overrides==7.7.0
 packaging==24.2
 pandocfilters==1.5.1
@@ -118,17 +132,23 @@ parso==0.8.4
 pexpect==4.9.0
 phonemizer==3.3.0
 pillow==11.2.1
+-e git+https://github.com/YoungJae98/vits_pytorch_lightning.git@3ebc29829b2a5fff6480f0c9358bb6e51c6f245c#egg=pl_tts
 platformdirs==4.3.7
 pooch==1.8.2
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 propcache==0.3.1
+protobuf==6.31.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
 Pygments==2.19.1
 pyparsing==3.2.3
+PySocks==1.7.1
+pystoi==0.4.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytorch-lightning==2.5.1
@@ -146,7 +166,10 @@ scikit-learn==1.6.1
 scipy==1.13.1
 segments==2.3.0
 Send2Trash==1.8.3
+sentry-sdk==2.29.1
+setproctitle==1.3.6
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soundfile==0.13.1
 soupsieve==2.7
@@ -157,24 +180,28 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tomli==2.2.1
-torch==2.6.0
-torchaudio==2.6.0
+torch @ file:///opt/conda/conda-bld/libtorch_1745854776362/work
+torch-stoi==0.2.3
+torchaudio @ file:///opt/conda/conda-bld/torchaudio_1747147230305/work
 torchmetrics==1.7.1
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-triton==3.2.0
+triton @ file:///croot/triton_1741878695212/work/python
 typeguard==4.3.0
 types-python-dateutil==2.9.0.20241206
-typing_extensions==4.13.2
+typing-inspection==0.4.1
+typing_extensions @ file:///croot/typing_extensions_1734714854207/work
 Unidecode==1.3.8
 uri-template==1.3.0
 uritemplate==4.1.1
 urllib3==2.4.0
+wandb==0.19.11
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
+wrapt @ file:///croot/wrapt_1736540904746/work
 yarl==1.20.0
-zipp==3.21.0
+zipp @ file:///croot/zipp_1732630741423/work
