--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,8 @@ httpx==0.28.1
 idna==3.10
 importlib_resources==6.5.2
 inflect==7.3.1
+intel-cmplr-lib-ur==2025.1.1
+intel-openmp==2025.1.1
 ipykernel==6.29.5
 ipython==8.18.1
 ipywidgets==8.1.6
@@ -82,11 +84,12 @@ lazy_loader==0.4
 librosa==0.11.0
 lightning==2.5.1
 lightning-utilities==0.14.3
-llvmlite==0.43.0
+llvmlite==0.43.0\
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.3
-mkl-service==2.4.0
+mkl==2025.1.0
+mkl-service==2.4.0\
 more-itertools==10.3.0
 msgpack==1.1.0
 multidict==6.4.3
@@ -137,6 +140,7 @@ pystoi==0.4.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytorch-lightning==2.5.1
+pyworld==0.3.5
 PyYAML==6.0.2
 pyzmq==26.4.0
 rdflib==7.1.4
@@ -161,6 +165,8 @@ soupsieve==2.7
 soxr==0.5.0.post1
 stack-data==0.6.3
 sympy==1.13.1
+tbb==2022.1.0
+tcmlib==1.3.0
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
@@ -173,6 +179,7 @@ traitlets==5.14.3
 typeguard==4.3.0
 types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.1
+umf==0.10.0
 Unidecode==1.3.8
 uri-template==1.3.0
 uritemplate==4.1.1
